--- a/Notes/jonas_uppgift_2_even_cleaner.ipynb
+++ b/Notes/jonas_uppgift_2_even_cleaner.ipynb
@@ -1706,6 +1706,166 @@
     "#TODO: subplots with px 3x1. Visa enbart länder med \n",
     "#TODO: Live adjustable subplot-width?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross Country Skiing Women's 3 x 5 kilometres Relay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>NOC</th>\n",
+       "      <th>Games</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>region</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1210</th>\n",
+       "      <td>F</td>\n",
+       "      <td>Soviet Union</td>\n",
+       "      <td>URS</td>\n",
+       "      <td>1968 Winter</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Grenoble</td>\n",
+       "      <td>Cross Country Skiing</td>\n",
+       "      <td>Cross Country Skiing Women's 3 x 5 kilometres ...</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3940</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>1960 Winter</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Squaw Valley</td>\n",
+       "      <td>Cross Country Skiing</td>\n",
+       "      <td>Cross Country Skiing Men's 4 x 10 kilometres R...</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3969</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>1992 Winter</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Albertville</td>\n",
+       "      <td>Cross Country Skiing</td>\n",
+       "      <td>Cross Country Skiing Men's 10 kilometres</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3972</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>1992 Winter</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Albertville</td>\n",
+       "      <td>Cross Country Skiing</td>\n",
+       "      <td>Cross Country Skiing Men's 4 x 10 kilometres R...</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3973</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>1994 Winter</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Lillehammer</td>\n",
+       "      <td>Cross Country Skiing</td>\n",
+       "      <td>Cross Country Skiing Men's 10 kilometres</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Sex          Team  NOC        Games  Year  Season          City  \\\n",
+       "1210   F  Soviet Union  URS  1968 Winter  1968  Winter      Grenoble   \n",
+       "3940   M       Finland  FIN  1960 Winter  1960  Winter  Squaw Valley   \n",
+       "3969   M         Italy  ITA  1992 Winter  1992  Winter   Albertville   \n",
+       "3972   M         Italy  ITA  1992 Winter  1992  Winter   Albertville   \n",
+       "3973   M         Italy  ITA  1994 Winter  1994  Winter   Lillehammer   \n",
+       "\n",
+       "                     Sport                                              Event  \\\n",
+       "1210  Cross Country Skiing  Cross Country Skiing Women's 3 x 5 kilometres ...   \n",
+       "3940  Cross Country Skiing  Cross Country Skiing Men's 4 x 10 kilometres R...   \n",
+       "3969  Cross Country Skiing           Cross Country Skiing Men's 10 kilometres   \n",
+       "3972  Cross Country Skiing  Cross Country Skiing Men's 4 x 10 kilometres R...   \n",
+       "3973  Cross Country Skiing           Cross Country Skiing Men's 10 kilometres   \n",
+       "\n",
+       "       Medal   region notes  \n",
+       "1210  Bronze   Russia   NaN  \n",
+       "3940    Gold  Finland   NaN  \n",
+       "3969  Silver    Italy   NaN  \n",
+       "3972  Silver    Italy   NaN  \n",
+       "3973  Bronze    Italy   NaN  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_women_relay = reusable_df[reusable_df[\"Event\"] == \"Cross Country Skiing Women's 3 x 5 kilometres Relay\"]\n",
+    "df_women_relay = df_women_relay.drop(columns=['ID','Name', 'Age', 'Height','Weight']).dropna(subset='Medal').drop_duplicates()"
+   ]
   }
  ],
  "metadata": {
