updating jonas uppgift 0

--- a/Notes/jonas_Uppgift_0.ipynb
+++ b/Notes/jonas_Uppgift_0.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,13 +178,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df1 = pd.read_csv(\"../Project/Data/athlete_events.csv\")\n",
+    "df1 = pd.read_csv(\"../Data/athlete_events.csv\")\n",
     "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "4  AND      Andorra                   NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,13 +265,13 @@
    "source": [
     "# import second csv file\n",
     "\n",
-    "df2 = pd.read_csv(\"../Project/Data/noc_regions.csv\")\n",
+    "df2 = pd.read_csv(\"../Data/noc_regions.csv\")\n",
     "df2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "4  Speed Skating Women's 500 metres   NaN  Netherlands   NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "4  Speed Skating Women's 500 metres   NaN  Netherlands   NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -826,11 +826,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO utforska med lite egna frågeställningar"
+    "#TODO utforska med lite egna frågeställningar\n",
+    "\n",
+    "# Lade märke till hur vissa år saknas, 2018, 2020, 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Män deltagande: 196594\n",
+      "Kvinnor deltagande: 74522\n"
+     ]
+    }
+   ],
+   "source": [
+    "men = df[\"ID\"][df.Sex == \"M\"].count()\n",
+    "print(f\"Män deltagande: {men}\")\n",
+    "\n",
+    "women = df[\"ID\"][df.Sex == \"F\"].count()\n",
+    "print(f\"Kvinnor deltagande: {women}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deltagare totalt:  271116\n"
+     ]
+    }
+   ],
+   "source": [
+    "# totalt antal deltagare\n",
+    "print(\"Deltagare totalt: \",df[\"Sex\"].count())"
    ]
   },
   {
@@ -842,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +1000,7 @@
        "M    196594  196594  196594  196594  28530  196360   4138  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +1024,7 @@
        "Name: ID, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1195,7 @@
        "0   NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1303,7 @@
        "9    Hungary   1135"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2317,7 @@
        "0     4       4     4      4      4      0  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
