small updates to uppgift 0

--- a/Notes/jonas_Uppgift_0.ipynb
+++ b/Notes/jonas_Uppgift_0.ipynb
@@ -837,6 +837,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1896 1900 1904 1906 1908 1912 1920 1924 1928 1932 1936 1948 1952 1956\n",
+      " 1960 1964 1968 1972 1976 1980 1984 1988 1992 1994 1996 1998 2000 2002\n",
+      " 2004 2006 2008 2010 2012 2014 2016]\n"
+     ]
+    }
+   ],
+   "source": [
+    "years = df[\"Year\"].unique()\n",
+    "years.sort() # sorts ascending\n",
+    "print(f\"{years}\")\n",
+    "\n",
+    "# saknar en del data, 2018, 2020, 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antalet deltagare under 18: 12508\n"
+     ]
+    }
+   ],
+   "source": [
+    "under_18 = df[\"ID\"][df[\"Age\"] < 18].count()\n",
+    "\n",
+    "print(f\"Antalet deltagare under 18: {under_18}\")\n",
+    "\n",
+    "# Denna överraskade mig, jag trodde inte alls att det var så många deltagare genom tiderna som har varit yngre än 18.\n",
+    "# Note: Detta resultatet har inte sorterat ut ifall en atlet deltog i flera sporter/grenar etc. under samma år."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -2229,102 +2274,8 @@
     "import plotly.express as px\n",
     "\n",
     "fig = px.bar(df_medal_10, x=\"region\", y=\"Medal\")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Why does the results differ? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>region</th>\n",
-       "      <th>Medal</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>NOC</th>\n",
-       "      <th>Games</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>notes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>Silver</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     region   Medal  ID  Name  Sex  Age  Height  Weight  Team  NOC  Games  \\\n",
-       "0  Zimbabwe  Silver   4     4    4    4       4       4     4    4      4   \n",
-       "\n",
-       "   Year  Season  City  Sport  Event  notes  \n",
-       "0     4       4     4      4      4      0  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = df.groupby([\"region\", \"Medal\"]).count().sort_values(by=\"Medal\", ascending=False).reset_index()\n",
-    "result.head(1)"
+    "fig.show()\n",
+    "# lagsporter"
    ]
   }
  ],
