small structure change

--- a/Notes/jonas_Uppgift_0.ipynb
+++ b/Notes/jonas_Uppgift_0.ipynb
@@ -480,6 +480,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of TEAMS in data: 1184\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries_team = df[\"Team\"].unique()\n",
+    "print(f\"Number of TEAMS in data: {len(countries_team)}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -800,6 +818,8 @@
     "\n",
     "# TODO: try to remove the decimals from mean_to_fill_nan, not sure how the effect the results of std\n",
     "mean_to_fill_nan = df[\"Age\"].mean()\n",
+    "# alla NaNs\n",
+    "# man skulle kunna köra .dropna() på age istället\n",
     "df[\"Age\"].fillna(value=mean_to_fill_nan, inplace=True)\n",
     "mean = df[\"Age\"].mean()\n",
     "print(f\"The mean age is: {mean:.2f} years\")\n",
