--- a/Notes/jonas_uppgift_1.ipynb
+++ b/Notes/jonas_uppgift_1.ipynb
@@ -172,6 +172,8 @@
    ],
    "source": [
     "import hashlib\n",
+    "# funktion för att hasha deltagrna i ett land\n",
+    "# men man måste fortfarande tilldela variablen \"country\" ett land\n",
     "\n",
     "def hash_team(df_merge, country: str) -> pd.Series:\n",
     "    \"\"\"Returns column with hashed ahtlete names as pd.series.\"\"\"\n",
@@ -21267,6 +21269,213 @@
     "        \n",
     "        title=\" Total number of females participated in Olympics\",\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>NOC</th>\n",
+       "      <th>Games</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>region</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>133</td>\n",
+       "      <td>Franz Abb</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>GER</td>\n",
+       "      <td>1900 Summer</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Gymnastics</td>\n",
+       "      <td>Gymnastics Men's Individual All-Around</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>669</th>\n",
+       "      <td>389</td>\n",
+       "      <td>Adolf Gaston Abel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>GER</td>\n",
+       "      <td>1928 Summer</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>Art Competitions</td>\n",
+       "      <td>Art Competitions Mixed Architecture, Designs F...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670</th>\n",
+       "      <td>389</td>\n",
+       "      <td>Adolf Gaston Abel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>GER</td>\n",
+       "      <td>1928 Summer</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>Art Competitions</td>\n",
+       "      <td>Art Competitions Mixed Architecture, Architect...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>393</td>\n",
+       "      <td>Gnther Abel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>West Germany</td>\n",
+       "      <td>FRG</td>\n",
+       "      <td>1976 Winter</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Innsbruck</td>\n",
+       "      <td>Nordic Combined</td>\n",
+       "      <td>Nordic Combined Men's Individual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>393</td>\n",
+       "      <td>Gnther Abel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>West Germany</td>\n",
+       "      <td>FRG</td>\n",
+       "      <td>1980 Winter</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Lake Placid</td>\n",
+       "      <td>Nordic Combined</td>\n",
+       "      <td>Nordic Combined Men's Individual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID               Name Sex   Age  Height  Weight          Team  NOC  \\\n",
+       "261  133          Franz Abb   M   NaN     NaN     NaN       Germany  GER   \n",
+       "669  389  Adolf Gaston Abel   M  45.0     NaN     NaN       Germany  GER   \n",
+       "670  389  Adolf Gaston Abel   M  45.0     NaN     NaN       Germany  GER   \n",
+       "674  393        Gnther Abel   M  19.0   183.0    80.0  West Germany  FRG   \n",
+       "675  393        Gnther Abel   M  23.0   183.0    80.0  West Germany  FRG   \n",
+       "\n",
+       "           Games  Year  Season         City             Sport  \\\n",
+       "261  1900 Summer  1900  Summer        Paris        Gymnastics   \n",
+       "669  1928 Summer  1928  Summer    Amsterdam  Art Competitions   \n",
+       "670  1928 Summer  1928  Summer    Amsterdam  Art Competitions   \n",
+       "674  1976 Winter  1976  Winter    Innsbruck   Nordic Combined   \n",
+       "675  1980 Winter  1980  Winter  Lake Placid   Nordic Combined   \n",
+       "\n",
+       "                                                 Event Medal   region notes  \\\n",
+       "261             Gymnastics Men's Individual All-Around   NaN  Germany   NaN   \n",
+       "669  Art Competitions Mixed Architecture, Designs F...   NaN  Germany   NaN   \n",
+       "670  Art Competitions Mixed Architecture, Architect...   NaN  Germany   NaN   \n",
+       "674                   Nordic Combined Men's Individual   NaN  Germany   NaN   \n",
+       "675                   Nordic Combined Men's Individual   NaN  Germany   NaN   \n",
+       "\n",
+       "     Bronze  Gold  Silver  \n",
+       "261       0     0       0  \n",
+       "669       0     0       0  \n",
+       "670       0     0       0  \n",
+       "674       0     0       0  \n",
+       "675       0     0       0  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_germany.head()"
    ]
   }
  ],
