--- a/Notes/jonas_uppgift_2_even_cleaner.ipynb
+++ b/Notes/jonas_uppgift_2_even_cleaner.ipynb
@@ -33,7 +33,7 @@
     "xcs_df = df[df[\"Sport\"] == \"Cross Country Skiing\"]\n",
     "xcs_df.head()\n",
     "\n",
-    "\n",
+    "# doing this cause i want to drop duplicates, to easier count a team sport medal as ONE medal\n",
     "# dropping 'ID', 'Name', 'Age', 'Height', 'Weight' and NaN medals\n",
     "dropped_df = xcs_df.drop(columns=['ID','Name', 'Age', 'Height','Weight']).dropna(subset='Medal')\n",
     "\n",
